# voxa-server

./: Cargo.toml  README.md  plugin-schema.json
src/: cli.rs  macros.rs  main.rs  server.rs  types.rs
src/node_requests/: chunk.rs  indicator.rs  message.rs  mod.rs  voice.rs
src/plugin/: loader.rs  mod.rs  types.rs
src/requests/: indicator.rs  message.rs  mod.rs  voice.rs
src/utils/: auth.rs  client.rs  database.rs  logger.rs  mod.rs  vfs.rs  voice.rs
