[package]
name = "axiom-server"
version = "0.1.1-beta1"
edition = "2024"

[dependencies]
anyhow = "1.0.99"
base64 = "0.22.1"
chrono = "0.4.42"
once_cell = "1.21.3"
rand = "0.9.2"
rusqlite = "0.37.0"
rustyline = "17.0.2"
serde = { version = "1.0.219", features = ["serde_derive"] }
serde_json = "1.0.143"
sha1 = "0.10.6"
ureq = "3.1.2"
zip = "7.0.0"

[features]
default = []
